# SeaWar

./: CMakeLists.txt  CMakeLists.txt.user.3d05280.4.8-pre1  CMakeLists.txt.user.5e9f5ce.22  SeaWar_ru_RU.ts  boardgamescene.cpp  boardgamescene.h  gameview.cpp  gameview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  shipitem.cpp  shipitem.h  startgamedialog.cpp  startgamedialog.h  startgamedialog.ui
Controllers/: BoardController.cpp  BoardController.h  GameController.cpp  GameController.h  gamecontroller.cpp  gamecontroller.h
Models/: BoardModel.cpp  BoardModel.h  GameModel.cpp  GameModel.h  gamemodel.cpp  gamemodel.h  ship.cpp  ship.h
Observer/: Observer.cpp  Observer.h
resources/: resources.qrc
